--- a/index.html
+++ b/index.html
@@ -108,9 +108,72 @@
                     <div class="colin"><img src="./img/Moisturizing-Skin-Therapy-Lotion-Cream.png" alt="" ></div>
                 
                 </div>
-                <div class="lon">
-                      <div class="lonn"><a href="#">LOAD MORE WORK</a></div>
-                </div>
+               
+       </section>
+       <section id="sect6">
+            <div class="lon">
+                    <div class="lonn"><a href="#">LOAD MORE WORK</a></div>
+              </div>
+       </section>
+
+       <section id="sect7">
+           <div class="sec7">
+                <h1>Our Working Progress</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum nisi id asperiores voluptatum atque inventore? Possimus rem eius asper.</p>
+           </div>
+              <div class="secc7">
+                <button><i class="pe-7s-play"></i></button>
+              </div>
+
+       </section>
+
+       <section id="sect8">
+        <div class="col111">
+                <div class="col11">
+
+                        <div class="row"><i class="pe-7s-diamond"></i>
+                        <h3>UI/UX DESIGN</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, eveniet? </p>
+                        </div>
+                    </div>
+                    <div class="col11">
+                        <div class="row"><i class="pe-7s-arc"></i>
+                        <h3>WEB DEVELOPMENT</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, eveniet?</p>
+                        </div>
+                    </div>
+                    <div class="col11">
+                        <div class="row"><i class="pe-7s-phone"></i>
+                        <h3>APP/MOBILE</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, eveniet?</p>
+                        </div>
+                    </div>
+                    <div class="col11">
+                        <div class="row"><i class="pe-7s-joy"></i>
+                        <h3>GAME DESIGN</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, eveniet?</p></div>
+                    </div>
+                    <div class="col11">
+                       <div class="row"> <i class="pe-7s-plane"></i>
+                    <h3>SEO/MARKETING</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, eveniet?</p></div>
+                    </div>
+                    <div class="col11">
+                       <div class="row"> <i class="pe-7s-star"></i>
+                    <h3>GRAPHIC DESIGN</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, eveniet?</p></div>
+                    </div>
+                    <div class="col11">
+                        <div class="row"><i class="pe-7s-magic-wand"></i>
+                        <h3>PHOTOGRAPHY</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, eveniet?</p></div>
+                    </div>
+                    <div class="col11">
+                        <div class="row"><i class="pe-7s-paint-bucket"></i>
+                        <h3>ILLUSTRATIONS</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, eveniet?</p></div>
+                    </div>
+        </div>
        </section>
 </body>
 </html>
